# hyperscale-rs

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTION-PLAN.md  Cargo.toml  Dockerfile  Dockerfile.local  HANDOFF.md  README.md  README_DISTRIBUTED.md
crates/beacon/: Cargo.toml
crates/beacon/src/: action_handlers.rs  block_sync.rs  boundary.rs  commit_assembly.rs  constants.rs  coordinator.rs  equivocations.rs  fork_observations.rs  genesis.rs  lib.rs  msc.rs  pc.rs  pending_blocks.rs  prefix_ops.rs  proposal_pool.rs  ratify.rs  recovery.rs  recovery_tracker.rs  rules.rs  sampling.rs  shard_source.rs  sig_pool.rs  skip.rs  skip_tracker.rs  spc.rs  spc_driver.rs  state.rs  state_root.rs  verification.rs  vote_equivocation_observations.rs  witness_fetcher.rs
crates/beacon/tests/: committee_security.rs  coordinator.rs  determinism.rs  pc.rs  qc3_forgery.rs  randomness_grinding.rs  recovery_scenarios.rs  spc.rs
crates/bft/: Cargo.toml
crates/bft/src/: action_handlers.rs  block_sync.rs  chain_view.rs  commit_dedup.rs  commit_pipeline.rs  config.rs  coordinator.rs  fetch.rs  handlers.rs  lib.rs  lookups.rs  pending.rs  proposal.rs  state.rs  sync.rs  tx_cache.rs  validation.rs  verification.rs  view_change.rs  vote_keeper.rs  vote_set.rs
crates/bft/tests/: coordinator.rs
crates/core/: Cargo.toml
crates/core/src/: action.rs  action_context.rs  event.rs  execution_backend.rs  fetch_abandon.rs  fetch_request.rs  input.rs  lib.rs  message.rs  node_config.rs  protocol_event.rs  result.rs  timer.rs  traits.rs  validation.rs
crates/dispatch-pooled/: Cargo.toml
crates/dispatch-pooled/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: cache.rs  engine.rs  execution.rs  executor.rs  genesis.rs  genesis_cache.rs  handlers.rs  lib.rs  output.rs  overlay.rs  provisioned_snapshot.rs  receipt.rs  result.rs  sharding.rs  simulation.rs  simulation_engine.rs  storage.rs  traits.rs  validation.rs
crates/execution/: Cargo.toml
crates/execution/src/: accumulator.rs  action_handlers.rs  conflict.rs  coordinator.rs  early_arrivals.rs  exec_cert_store.rs  execution_cache.rs  expected_certs.rs  finalized_waves.rs  handlers.rs  lib.rs  lookups.rs  outbound_certs.rs  pending.rs  provisioning.rs  state.rs  vote_tracker.rs  wave_accumulator.rs  wave_state.rs  waves.rs
crates/execution/tests/: coordinator.rs
crates/jmt/: Cargo.toml
crates/jmt/benches/: jmt_ops.rs
crates/jmt/src/: conversions.rs  entity_tier.rs  hasher.rs  jellyfish.rs  lib.rs  multiproof.rs  node.rs  partition_tier.rs  range.rs  storage.rs  substate_tier.rs  test_utils.rs  tests.rs  tier_framework.rs  tree.rs  tree_store.rs  types.rs
crates/jmt/tests/: property_tests.rs
crates/livelock/: Cargo.toml
crates/livelock/src/: lib.rs  state.rs  tracker.rs
crates/mempool/: Cargo.toml
crates/mempool/benches/: mempool_throughput.rs
crates/mempool/proptest-regressions/: ready_set.txt
crates/mempool/src/: coordinator.rs  expected_txs.rs  lib.rs  lock_tracker.rs  ready_set.rs  state.rs  tombstones.rs  tx_store.rs
crates/mempool/tests/: coordinator.rs
crates/messages/: Cargo.toml
crates/messages/src/: lib.rs  trace_context.rs
crates/network/: Cargo.toml
crates/network-libp2p/: Cargo.toml
crates/network-libp2p/src/: action_dispatcher.rs  adapter.rs  address_book.rs  codec_pool.rs  config.rs  decompress_pool.rs  fault_gate.rs  framing.rs  inbound.rs  inbound_router.rs  lib.rs  message_batcher.rs  network.rs  notify_pool.rs  peer_backoff.rs  peer_health.rs  request_manager.rs  request_pool.rs  stream_framing.rs  test_utils.rs  validator_bind.rs
crates/network-libp2p/tests/: validator_bind.rs
crates/network-memory/: Cargo.toml
crates/network-memory/src/: fault.rs  lib.rs  network.rs  sim_network.rs  traffic.rs
crates/network/src/: codec.rs  compression.rs  fault.rs  fetch_protocol.rs  handler_registry.rs  lib.rs  registry.rs  request_frame.rs  sync_protocol.rs  topic.rs  traits.rs  wire.rs
crates/node/: Cargo.toml
crates/node/src/: action_handler.rs  batch_accumulator.rs  config.rs  event.rs  fetch.rs  fetch_protocol.rs  gossip_bridge.rs  gossip_dispatch.rs  host.rs  inbound_handler.rs  io_loop.rs  lib.rs  node_loop.rs  pool_loop.rs  provision_cache.rs  provision_fetch_protocol.rs  request_handler.rs  state.rs  sync.rs  sync_protocol.rs  vnode.rs
crates/node/tests/: reconfigure.rs
crates/parallel/: Cargo.toml
crates/parallel/src/: cache.rs  config.rs  lib.rs  metrics.rs  router.rs  simulator.rs
crates/production/: Cargo.toml
crates/production/config/: validator.example.toml
crates/production/src/: action_dispatcher.rs  bootstrap.rs  drain.rs  event_loop.rs  fetch.rs  fetch_handler.rs  lib.rs  message_batcher.rs  metrics.rs  runner.rs  setup.rs  shared_state.rs  status.rs  storage.rs  supervisor.rs  sync.rs  sync_error.rs  telemetry.rs  thread_pools.rs  timers.rs  tx_ingress.rs  validation_batcher.rs
crates/production/tests/: e2e_tests.rs  multi_vnode.rs  multi_vnode_bind.rs  network.rs  reshape_cluster.rs  reshape_e2e.rs  runner.rs  scenarios.rs  validator_bind.rs
crates/provisions/: Cargo.toml
crates/provisions/src/: action_handlers.rs  build.rs  committed_tombstones.rs  coordinator.rs  expected.rs  handlers.rs  lib.rs  outbound.rs  pipeline.rs  queue.rs  state.rs  store.rs  verification.rs  verified_headers.rs
crates/provisions/tests/: coordinator.rs
crates/radix-config/: Cargo.toml
crates/radix-config/src/: lib.rs
crates/remote-headers/: Cargo.toml
crates/remote-headers/src/: coordinator.rs  lib.rs  state.rs
crates/scenarios/: Cargo.toml
crates/scenarios/src/: cluster.rs  config.rs  faults.rs  grow.rs  lib.rs  liveness.rs  multi_vnode.rs  query.rs  reshape.rs  straddler.rs  transactions.rs  tx.rs  wait.rs  witnesses.rs
crates/shard/: Cargo.toml
crates/shard/src/: config.rs  (+19 more)
crates/simulation/: Cargo.toml
crates/simulator/: Cargo.toml
crates/spammer/: Cargo.toml
crates/state-tree/: Cargo.toml
crates/storage/: Cargo.toml
crates/storage-memory/: Cargo.toml
crates/storage-rocksdb/: Cargo.toml
crates/test-helpers/: Cargo.toml
(+939 files in other folders)
