[workspace]
resolver = "2"
members = [
    "crates/bft",
    "crates/codec",
    "crates/core",
    "crates/dispatch",
    "crates/dispatch-pooled",
    "crates/dispatch-sync",
    "crates/engine",
    "crates/jmt",
    "crates/execution",
    "crates/livelock",
    "crates/mempool",
    "crates/messages",
    "crates/metrics",
    "crates/metrics-noop",
    "crates/metrics-prometheus",
    "crates/network",
    "crates/network-libp2p",
    "crates/network-memory",
    "crates/node",
    "crates/production",
    "crates/provisions",
    "crates/simulation",
    "crates/simulator",
    "crates/spammer",
    "crates/storage",
    "crates/storage-memory",
    "crates/storage-rocksdb",
    "crates/test-helpers",
    "crates/topology",
    "crates/types",
]

default-members = [
    "crates/bft",
    "crates/codec",
    "crates/core",
    "crates/dispatch",
    "crates/dispatch-pooled",
    "crates/dispatch-sync",
    "crates/engine",
    "crates/jmt",
    "crates/execution",
    "crates/livelock",
    "crates/mempool",
    "crates/messages",
    "crates/metrics",
    "crates/metrics-noop",
    "crates/metrics-prometheus",
    "crates/network",
    "crates/network-libp2p",
    "crates/network-memory",
    "crates/node",
    "crates/production",
    "crates/provisions",
    "crates/simulation",
    "crates/simulator",
    "crates/spammer",
    "crates/storage",
    "crates/storage-memory",
    "crates/storage-rocksdb",
    "crates/test-helpers",
    "crates/topology",
    "crates/types",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Internal crates
hyperscale-bft = { path = "crates/bft" }
hyperscale-metrics = { path = "crates/metrics" }
hyperscale-metrics-noop = { path = "crates/metrics-noop" }
hyperscale-metrics-prometheus = { path = "crates/metrics-prometheus" }
hyperscale-codec = { path = "crates/codec" }
hyperscale-core = { path = "crates/core" }
hyperscale-dispatch = { path = "crates/dispatch" }
hyperscale-dispatch-pooled = { path = "crates/dispatch-pooled" }
hyperscale-dispatch-sync = { path = "crates/dispatch-sync" }
hyperscale-storage = { path = "crates/storage" }
hyperscale-storage-memory = { path = "crates/storage-memory" }
hyperscale-storage-rocksdb = { path = "crates/storage-rocksdb" }
hyperscale-engine = { path = "crates/engine" }
hyperscale-jmt = { path = "crates/jmt" }
hyperscale-execution = { path = "crates/execution" }
hyperscale-livelock = { path = "crates/livelock" }
hyperscale-mempool = { path = "crates/mempool" }
hyperscale-messages = { path = "crates/messages" }
hyperscale-network = { path = "crates/network" }
hyperscale-network-libp2p = { path = "crates/network-libp2p" }
hyperscale-network-memory = { path = "crates/network-memory" }
hyperscale-node = { path = "crates/node" }
hyperscale-production = { path = "crates/production" }
hyperscale-provisions = { path = "crates/provisions" }
hyperscale-simulation = { path = "crates/simulation" }
hyperscale-simulator = { path = "crates/simulator" }
hyperscale-spammer = { path = "crates/spammer" }
hyperscale-test-helpers = { path = "crates/test-helpers" }
hyperscale-topology = { path = "crates/topology" }
hyperscale-types = { path = "crates/types" }

# External dependencies
arc-swap = "1.8.0"
blake3 = "1.5"
bytes = "1.9"
clap = { version = "4", features = ["derive"] }
core_affinity = "0.8"
crossbeam = "0.8.2"
dashmap = "6.1.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
futures = "0.3"
hdrhistogram = "7.5"
hex = { version = "0.4.3", default-features = false }
im = "15.1"
indexmap = "2.13.0"
itertools = "0.14.0"
libp2p = { version = "0.56.0", features = ["gossipsub", "kad", "quic", "tcp", "noise", "yamux", "tokio", "macros", "identify"] }
libp2p-stream = "0.4.0-alpha"
opentelemetry = "0.31.0"
opentelemetry_sdk = "0.31.0"
parking_lot = "0.12"
quick_cache = "0.6"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.10"
rocksdb = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8.0"
thiserror = "2.0.18"
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"
tracing = "0.1.44"
tracing-subscriber = "0.3"
tracing-test = "0.2.5"

# Radix dependencies (github.com/hyperscalers/radixdlt-scrypto @ 7d0b9a0)
radix-common = { git = "https://github.com/hyperscalers/radixdlt-scrypto", rev = "7d0b9a0", default-features = false, features = ["std"] }
radix-engine = { git = "https://github.com/hyperscalers/radixdlt-scrypto", rev = "7d0b9a0", default-features = false, features = ["std", "moka"] }
radix-engine-interface = { git = "https://github.com/hyperscalers/radixdlt-scrypto", rev = "7d0b9a0", default-features = false, features = ["std"] }
radix-substate-store-interface = { git = "https://github.com/hyperscalers/radixdlt-scrypto", rev = "7d0b9a0", default-features = false, features = ["std"] }
radix-transactions = { git = "https://github.com/hyperscalers/radixdlt-scrypto", rev = "7d0b9a0", default-features = false, features = ["std"] }
sbor = { git = "https://github.com/hyperscalers/radixdlt-scrypto", rev = "7d0b9a0", default-features = false, features = ["std"] }
