[workspace]
resolver = "2"
members = [
    "crates/bft",
    "crates/core",
    "crates/dispatch",
    "crates/dispatch-pooled",
    "crates/dispatch-sync",
    "crates/engine",
    "crates/execution",
    "crates/mempool",
    "crates/messages",
    "crates/metrics",
    "crates/metrics-prometheus",
    "crates/network",
    "crates/network-libp2p",
    "crates/network-memory",
    "crates/node",
    "crates/production",
    "crates/remote-headers",
    "crates/provisions",
    "crates/simulation",
    "crates/simulator",
    "crates/spammer",

    "crates/jmt",
    "crates/storage",
    "crates/storage-memory",
    "crates/storage-rocksdb",
    "crates/test-helpers",
    "crates/topology",
    "crates/types",
]

default-members = [
    "crates/bft",
    "crates/core",
    "crates/dispatch",
    "crates/dispatch-pooled",
    "crates/dispatch-sync",
    "crates/engine",
    "crates/execution",
    "crates/mempool",
    "crates/messages",
    "crates/metrics",
    "crates/metrics-prometheus",
    "crates/network",
    "crates/network-libp2p",
    "crates/network-memory",
    "crates/node",
    "crates/production",
    "crates/remote-headers",
    "crates/provisions",
    "crates/simulation",
    "crates/simulator",
    "crates/spammer",

    "crates/jmt",
    "crates/storage",
    "crates/storage-memory",
    "crates/storage-rocksdb",
    "crates/test-helpers",
    "crates/topology",
    "crates/types",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Internal crates
hyperscale-bft = { path = "crates/bft" }
hyperscale-metrics = { path = "crates/metrics" }
hyperscale-metrics-prometheus = { path = "crates/metrics-prometheus" }
hyperscale-core = { path = "crates/core" }
hyperscale-dispatch = { path = "crates/dispatch" }
hyperscale-dispatch-pooled = { path = "crates/dispatch-pooled" }
hyperscale-dispatch-sync = { path = "crates/dispatch-sync" }
hyperscale-engine = { path = "crates/engine" }
hyperscale-execution = { path = "crates/execution" }
hyperscale-jmt = { path = "crates/jmt" }
hyperscale-mempool = { path = "crates/mempool" }
hyperscale-messages = { path = "crates/messages" }
hyperscale-network = { path = "crates/network" }
hyperscale-network-libp2p = { path = "crates/network-libp2p" }
hyperscale-network-memory = { path = "crates/network-memory" }
hyperscale-node = { path = "crates/node" }
hyperscale-production = { path = "crates/production" }
hyperscale-provisions = { path = "crates/provisions" }
hyperscale-remote-headers = { path = "crates/remote-headers" }
hyperscale-simulation = { path = "crates/simulation" }
hyperscale-simulator = { path = "crates/simulator" }
hyperscale-spammer = { path = "crates/spammer" }
hyperscale-storage = { path = "crates/storage" }
hyperscale-storage-memory = { path = "crates/storage-memory" }
hyperscale-storage-rocksdb = { path = "crates/storage-rocksdb" }
hyperscale-test-helpers = { path = "crates/test-helpers" }
hyperscale-topology = { path = "crates/topology" }
hyperscale-types = { path = "crates/types" }

# External dependencies
ark-ec = "0.5"
ark-ed-on-bls12-381-bandersnatch = "0.5"
ark-ff = "0.5"
ark-serialize = "0.5"
arc-swap = "1.9.1"
blake3 = "1.8.4"
bytes = "1.9"
clap = { version = "4.6.1", features = ["derive"] }
core_affinity = "0.8"
crossbeam = "0.8.2"
dashmap = "6.1.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
futures = "0.3"
hdrhistogram = "7.5"
hex = { version = "0.4.3", default-features = false }
im = "15.1"
indexmap = "2.14.0"
libp2p = { version = "0.56.0", features = ["gossipsub", "kad", "quic", "tcp", "noise", "yamux", "tokio", "macros", "identify"] }
libp2p-stream = "0.4.0-alpha"
opentelemetry = "0.31.0"
opentelemetry_sdk = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "reqwest-rustls"] }
opentelemetry-semantic-conventions = "0.31.0"
parking_lot = "0.12"
proptest = "1"
quick_cache = "0.6.21"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.12.0"
rocksdb = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
toml = "1.1.2+spec-1.1.0"
tracing = "0.1.44"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = "0.3.23"
tracing-test = "0.2.5"

# Radix dependencies (github.com/hyperscalers/radixdlt-scrypto @ 7d0b9a0)
radix-common = { git = "https://github.com/hyperscalers/radixdlt-scrypto", rev = "7d0b9a0", default-features = false, features = ["std"] }
radix-engine = { git = "https://github.com/hyperscalers/radixdlt-scrypto", rev = "7d0b9a0", default-features = false, features = ["std", "moka"] }
radix-engine-interface = { git = "https://github.com/hyperscalers/radixdlt-scrypto", rev = "7d0b9a0", default-features = false, features = ["std"] }
radix-substate-store-interface = { git = "https://github.com/hyperscalers/radixdlt-scrypto", rev = "7d0b9a0", default-features = false, features = ["std"] }
radix-transactions = { git = "https://github.com/hyperscalers/radixdlt-scrypto", rev = "7d0b9a0", default-features = false, features = ["std"] }
sbor = { git = "https://github.com/hyperscalers/radixdlt-scrypto", rev = "7d0b9a0", default-features = false, features = ["std"] }
