[workspace]
resolver = "2"
members = [
    "crates/beacon",
    "crates/core",
    "crates/dispatch",
    "crates/dispatch-pooled",
    "crates/dispatch-sync",
    "crates/engine",
    "crates/execution",
    "crates/jmt",
    "crates/mempool",
    "crates/metrics",
    "crates/metrics-memory",
    "crates/metrics-prometheus",
    "crates/network",
    "crates/network-libp2p",
    "crates/network-memory",
    "crates/node",
    "crates/production",
    "crates/provisions",
    "crates/remote-headers",
    "crates/scenarios",
    "crates/shard",
    "crates/simulation",
    "crates/simulator",
    "crates/spammer",
    "crates/storage",
    "crates/storage-memory",
    "crates/storage-rocksdb",
    "crates/test-helpers",
    "crates/types",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Internal crates
hyperscale-beacon = { path = "crates/beacon" }
hyperscale-core = { path = "crates/core" }
hyperscale-dispatch = { path = "crates/dispatch" }
hyperscale-dispatch-pooled = { path = "crates/dispatch-pooled" }
hyperscale-dispatch-sync = { path = "crates/dispatch-sync" }
hyperscale-engine = { path = "crates/engine" }
hyperscale-execution = { path = "crates/execution" }
hyperscale-jmt = { path = "crates/jmt", features = ["parallel"] }
hyperscale-mempool = { path = "crates/mempool" }
hyperscale-metrics = { path = "crates/metrics" }
hyperscale-metrics-memory = { path = "crates/metrics-memory" }
hyperscale-metrics-prometheus = { path = "crates/metrics-prometheus" }
hyperscale-network = { path = "crates/network" }
hyperscale-network-libp2p = { path = "crates/network-libp2p" }
hyperscale-network-memory = { path = "crates/network-memory" }
hyperscale-node = { path = "crates/node" }
hyperscale-production = { path = "crates/production" }
hyperscale-provisions = { path = "crates/provisions" }
hyperscale-remote-headers = { path = "crates/remote-headers" }
hyperscale-scenarios = { path = "crates/scenarios" }
hyperscale-shard = { path = "crates/shard" }
hyperscale-simulation = { path = "crates/simulation" }
hyperscale-simulator = { path = "crates/simulator" }
hyperscale-spammer = { path = "crates/spammer" }
hyperscale-storage = { path = "crates/storage" }
hyperscale-storage-memory = { path = "crates/storage-memory" }
hyperscale-storage-rocksdb = { path = "crates/storage-rocksdb" }
hyperscale-test-helpers = { path = "crates/test-helpers" }
hyperscale-types = { path = "crates/types" }

# External dependencies
arc-swap = "1.9.2"
blake3 = "1.8.5"
blst = "0.3.16"
bytes = "1.12.0"
clap = { version = "4.6.1", features = ["derive"] }
core_affinity = "0.8.3"
crossbeam = "0.8.4"
dashmap = "6.2.1"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
futures = "0.3.32"
hdrhistogram = "7.5.4"
hex = { version = "0.4.3", default-features = false }
im = "15.1.0"
indexmap = "2.14.0"
libp2p = { version = "0.56.0", features = ["gossipsub", "kad", "quic", "tokio", "macros", "identify"] }
libp2p-stream = "0.4.0-alpha"
opentelemetry = "0.32.0"
opentelemetry_sdk = "0.32.1"
opentelemetry-otlp = { version = "0.32.0", features = ["grpc-tonic", "reqwest-rustls"] }
opentelemetry-semantic-conventions = "0.32.1"
papaya = "0.2.4"
parking_lot = "0.12.5"
proptest = "1.11.0"
quick_cache = "0.7.0"
rand = "0.10.1"
rand_chacha = "0.10.0"
rayon = "1.12.0"
rocksdb = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
strum = { version = "0.28.0", features = ["derive"] }
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "net"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-opentelemetry = "0.33.0"
tracing-subscriber = "0.3.23"
tracing-test = "0.2.6"

# Radix dependencies (github.com/hyperscalers/radixdlt-scrypto @ 21c0c4c)
radix-common = { git = "https://github.com/hyperscalers/radixdlt-scrypto", rev = "21c0c4c", default-features = false, features = ["std"] }
radix-engine = { git = "https://github.com/hyperscalers/radixdlt-scrypto", rev = "21c0c4c", default-features = false, features = ["std", "moka"] }
radix-engine-interface = { git = "https://github.com/hyperscalers/radixdlt-scrypto", rev = "21c0c4c", default-features = false, features = ["std"] }
radix-substate-store-interface = { git = "https://github.com/hyperscalers/radixdlt-scrypto", rev = "21c0c4c", default-features = false, features = ["std"] }
radix-transactions = { git = "https://github.com/hyperscalers/radixdlt-scrypto", rev = "21c0c4c", default-features = false, features = ["std"] }
sbor = { git = "https://github.com/hyperscalers/radixdlt-scrypto", rev = "21c0c4c", default-features = false, features = ["std"] }

[workspace.lints.rust]
missing_docs = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
absolute_paths = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"
invalid_codeblock_attributes = "warn"
private_intra_doc_links = "allow"
redundant_explicit_links = "warn"

# CI test profile: release-grade optimization so the simulation suite runs at
# full speed, with debug assertions and overflow checks kept on.
[profile.ci]
inherits = "release"
debug-assertions = true
overflow-checks = true
