[package]
name = "hyperscale-beacon"
version.workspace = true
edition.workspace = true
description = "Beacon-chain coordinator (PC/SPC/MSC consensus, validator-set + topology source)"

[dependencies]
hyperscale-core.workspace = true
hyperscale-network.workspace = true
hyperscale-storage.workspace = true
hyperscale-types.workspace = true
blake3.workspace = true
papaya.workspace = true
rand.workspace = true
rand_chacha.workspace = true
tracing.workspace = true

[dev-dependencies]
hyperscale-types = { workspace = true, features = ["test-utils"] }
proptest.workspace = true

[lints]
workspace = true
