[package]
name = "hyperscale-bft"
version.workspace = true
edition.workspace = true
description = "BFT consensus state machine"

[dependencies]
hyperscale-core.workspace = true
hyperscale-messages.workspace = true
hyperscale-storage.workspace = true
hyperscale-types.workspace = true
indexmap.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
hyperscale-test-helpers.workspace = true
proptest = "1"
tracing-test.workspace = true
