[package]
name = "hyperscale-bft"
version.workspace = true
edition.workspace = true
description = "BFT consensus state machine"

[dependencies]
hyperscale-core.workspace = true
hyperscale-engine.workspace = true
hyperscale-metrics.workspace = true
hyperscale-storage.workspace = true
hyperscale-types.workspace = true
tracing.workspace = true

[dev-dependencies]
hyperscale-test-helpers.workspace = true
proptest.workspace = true
tracing-test.workspace = true

[lints]
workspace = true
