[package]
name = "hyperscale-core"
version.workspace = true
edition.workspace = true
description = "Core types for Hyperscale consensus: Event, Action, and StateMachine trait"

[dependencies]
hyperscale-dispatch.workspace = true
hyperscale-engine.workspace = true
hyperscale-messages.workspace = true
hyperscale-storage.workspace = true
hyperscale-types.workspace = true
strum.workspace = true

[lints]
workspace = true
