[package]
name = "hyperscale-dispatch-pooled"
version.workspace = true
edition.workspace = true
description = "Rayon thread pool dispatch for production"

[dependencies]
core_affinity.workspace = true
hyperscale-dispatch.workspace = true
rayon.workspace = true
tracing.workspace = true
thiserror.workspace = true
