[package]
name = "hyperscale-engine"
version.workspace = true
edition.workspace = true
description = "Radix Engine integration"

[dependencies]
# Internal crates
hyperscale-core.workspace = true
hyperscale-storage.workspace = true
hyperscale-types.workspace = true

# External dependencies
thiserror.workspace = true
tracing.workspace = true
indexmap.workspace = true

# Radix dependencies (from vendor submodule)
radix-common.workspace = true
radix-engine.workspace = true
radix-engine-interface.workspace = true
radix-transactions.workspace = true
radix-substate-store-interface.workspace = true
radix-substate-store-impls.workspace = true

[dev-dependencies]
