[package]
name = "hyperscale-engine"
version.workspace = true
edition.workspace = true
description = "Radix Engine integration"

[dependencies]
# Internal crates
hyperscale-core.workspace = true
hyperscale-storage.workspace = true
hyperscale-types.workspace = true

# External dependencies
dashmap.workspace = true
thiserror.workspace = true
tracing.workspace = true
indexmap.workspace = true

# Radix dependencies
radix-common.workspace = true
radix-engine.workspace = true
radix-engine-interface.workspace = true
radix-transactions.workspace = true
radix-substate-store-interface.workspace = true

[lints]
workspace = true
