[package]
name = "hyperscale-execution"
version.workspace = true
edition.workspace = true
description = "Execution state machine"

[dependencies]
hyperscale-core.workspace = true
hyperscale-types.workspace = true
tracing.workspace = true

[dev-dependencies]
hyperscale-test-helpers.workspace = true
proptest.workspace = true

[lints]
workspace = true
