[package]
name = "hyperscale-execution"
version.workspace = true
edition.workspace = true
description = "Execution state machine"

[dependencies]
hyperscale-core.workspace = true
hyperscale-engine.workspace = true
hyperscale-metrics.workspace = true
hyperscale-network.workspace = true
hyperscale-storage.workspace = true
hyperscale-types.workspace = true
papaya.workspace = true
tracing.workspace = true

[dev-dependencies]
hyperscale-types = { workspace = true, features = ["test-utils"] }
proptest.workspace = true

[lints]
workspace = true
