[package]
name = "hyperscale-jmt"
version.workspace = true
edition.workspace = true
description = "Jellyfish Merkle Tree with generic hasher and batched multiproofs"

[features]
parallel = ["rayon"]

[dependencies]
blake3.workspace = true
rayon = { workspace = true, optional = true }
thiserror.workspace = true

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
proptest.workspace = true

[[bench]]
name = "jmt_ops"
harness = false

[lints]
workspace = true
