[package]
name = "hyperscale-livelock"
version.workspace = true
edition.workspace = true
description = "Livelock prevention for cross-shard transactions"

[dependencies]
hyperscale-core.workspace = true
hyperscale-types.workspace = true

tracing.workspace = true

[dev-dependencies]
hyperscale-radix-config.workspace = true
