[package]
name = "hyperscale-mempool"
version.workspace = true
edition.workspace = true
description = "Mempool state machine"

[dependencies]
hyperscale-core.workspace = true
hyperscale-messages.workspace = true
hyperscale-metrics.workspace = true
hyperscale-provisions.workspace = true
hyperscale-types.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true

[dev-dependencies]
hyperscale-test-helpers.workspace = true
hyperscale-types = { workspace = true, features = ["test-utils"] }
proptest = "1"
