[package]
name = "hyperscale-mempool"
version.workspace = true
edition.workspace = true
description = "Mempool state machine"

[dependencies]
hyperscale-core.workspace = true
hyperscale-metrics.workspace = true
hyperscale-types.workspace = true
papaya.workspace = true
tracing.workspace = true
serde.workspace = true

[dev-dependencies]
hyperscale-metrics-memory.workspace = true
hyperscale-test-helpers.workspace = true
hyperscale-types = { workspace = true, features = ["test-utils"] }
proptest.workspace = true

[lints]
workspace = true
