[package]
name = "hyperscale-messages"
version.workspace = true
edition.workspace = true
description = "Network message types"

[features]
default = []
# Enable cross-node trace context propagation in messages.
# Only useful in testnets/devnets where all nodes are instrumented.
trace-propagation = ["opentelemetry", "opentelemetry_sdk"]

[dependencies]
hyperscale-types.workspace = true

# Serialization
hyperscale-codec.workspace = true

# OpenTelemetry for trace context propagation (optional)
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }

[dev-dependencies]
hyperscale-radix-config.workspace = true
hyperscale-radix-types = { workspace = true, features = ["test-utils"] }
