[package]
name = "hyperscale-network-libp2p"
version.workspace = true
edition.workspace = true
description = "Production libp2p network transport"

[features]
default = []

[dependencies]
hyperscale-core.workspace = true
hyperscale-dispatch.workspace = true
hyperscale-dispatch-pooled.workspace = true
hyperscale-metrics.workspace = true
hyperscale-network.workspace = true
hyperscale-types.workspace = true

# Networking - libp2p with QUIC transport
libp2p = { version = "0.56.0", features = ["gossipsub", "kad", "quic", "tcp", "noise", "yamux", "tokio", "macros", "identify"] }
libp2p-stream = "0.4.0-alpha"
futures = "0.3"
bytes = "1.9"

# Serialization
sbor.workspace = true
serde = { version = "1.0", features = ["derive"] }

# CLI (for config enums)
clap = { version = "4", features = ["derive"] }


# Async runtime
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
rayon.workspace = true

# Lock-free concurrent data structures
dashmap = "6.1.0"

crossbeam.workspace = true
hex = "0.4"
rand = "0.8"

[dev-dependencies]
hyperscale-messages.workspace = true
