[package]
name = "hyperscale-network-libp2p"
version.workspace = true
edition.workspace = true
description = "Production libp2p network transport"

[features]
default = []
test-utils = ["hyperscale-network/test-utils", "dep:parking_lot"]

[dependencies]
arc-swap.workspace = true
bytes.workspace = true
clap.workspace = true
dashmap.workspace = true
futures.workspace = true
hyperscale-metrics.workspace = true
libp2p.workspace = true
libp2p-stream.workspace = true
hyperscale-network.workspace = true
hyperscale-types.workspace = true
rand.workspace = true
sbor.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

# Optional dependencies
parking_lot = { workspace = true, optional = true }

[dev-dependencies]
hyperscale-network-libp2p = { workspace = true, features = ["test-utils"] }
hyperscale-types = { workspace = true, features = ["test-utils"] }
serial_test = "3.5.0"
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }

[lints]
workspace = true
