[package]
name = "hyperscale-network-memory"
version.workspace = true
edition.workspace = true
description = "Deterministic in-memory network transport for simulation"

[dependencies]
hyperscale-core.workspace = true
hyperscale-network.workspace = true
hyperscale-types.workspace = true

hyperscale-codec.workspace = true
rand.workspace = true
rand_chacha.workspace = true
tracing.workspace = true

[dev-dependencies]
hyperscale-radix-config.workspace = true
hyperscale-radix-types = { workspace = true, features = ["test-utils"] }
hyperscale-messages.workspace = true
