[package]
name = "hyperscale-network-memory"
version.workspace = true
edition.workspace = true
description = "Deterministic in-memory network transport for simulation"

[dependencies]
hyperscale-network = { workspace = true, features = ["test-utils"] }
hyperscale-types.workspace = true
rand.workspace = true
rand_chacha.workspace = true
sbor.workspace = true
tracing.workspace = true

[dev-dependencies]
hyperscale-types = { workspace = true, features = ["test-utils"] }

[lints]
workspace = true
