[package]
name = "hyperscale-network"
version.workspace = true
edition.workspace = true
description = "Shared network protocol logic: Network trait, compression, topics, handler registry"

[dependencies]
hyperscale-types.workspace = true
lz4_flex = "0.13.0"
sbor.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]

[lints]
workspace = true
