[package]
name = "hyperscale-network"
version.workspace = true
edition.workspace = true
description = "Shared network protocol logic: Network trait, compression, topics, handler registry"

[dependencies]
arc-swap.workspace = true
hyperscale-types.workspace = true
lz4_flex = "0.13.1"
quick_cache.workspace = true
sbor.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
hyperscale-types = { workspace = true, features = ["test-utils"] }

[lints]
workspace = true
