[package]
name = "hyperscale-production"
version.workspace = true
edition.workspace = true
description = "Production runner with async I/O"

[features]
default = []
# Enable cross-node trace context propagation in messages.
# Only useful in testnets/devnets where all nodes are instrumented.
# Disabled by default for mainnet (no cross-node visibility anyway).
trace-propagation = ["hyperscale-messages/trace-propagation"]

[dependencies]
hyperscale-core.workspace = true
hyperscale-dispatch.workspace = true
hyperscale-dispatch-pooled.workspace = true
hyperscale-bft.workspace = true
hyperscale-execution.workspace = true
hyperscale-mempool.workspace = true
hyperscale-metrics.workspace = true
hyperscale-metrics-prometheus.workspace = true
hyperscale-storage.workspace = true
hyperscale-storage-rocksdb.workspace = true
hyperscale-node.workspace = true
hyperscale-provisions.workspace = true
hyperscale-topology.workspace = true
hyperscale-types.workspace = true
hyperscale-messages.workspace = true
hyperscale-network.workspace = true
hyperscale-network-libp2p.workspace = true

# Networking - libp2p (used for PeerId, Multiaddr types)
libp2p.workspace = true
libp2p-stream.workspace = true
futures.workspace = true
bytes.workspace = true
async-trait = "0.1"

# Serialization
hyperscale-codec.workspace = true

# Async runtime
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
parking_lot.workspace = true
crossbeam.workspace = true
core_affinity.workspace = true

# Lock-free concurrent data structures
arc-swap.workspace = true
dashmap.workspace = true
quick_cache.workspace = true

# OpenTelemetry for distributed tracing
opentelemetry.workspace = true
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "reqwest-rustls"] }
opentelemetry-semantic-conventions = "0.31.0"

# Tracing integration (version matched to opentelemetry 0.31.0)
tracing-opentelemetry = "0.32.0"

# Tracing subscriber for layer composition
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter", "registry"] }

# JSON serialization for health check responses
serde.workspace = true
serde_json.workspace = true

# HTTP server for metrics endpoint
axum = "0.8.7"

hex.workspace = true
tracing-appender = "0.2.4"

[dev-dependencies]
hyperscale-dispatch-sync.workspace = true
hyperscale-radix-config.workspace = true
hyperscale-radix-production.workspace = true
hyperscale-radix-types = { workspace = true, features = ["test-utils"] }
tempfile.workspace = true
serial_test = "3"
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
tower = "0.5"
